fix # not showing

--- a/frontend/src/styles/leaderboards.scss
+++ b/frontend/src/styles/leaderboards.scss
@@ -165,8 +165,8 @@
           i {
             display: none;
           }
-          &::before {
-            content: "#";
+          span {
+            display: inline;
           }
         }
         &.friendsOnly {
@@ -177,8 +177,8 @@
             i {
               display: inline;
             }
-            &::before {
-              content: "";
+            span {
+              display: none;
             }
           }
         }
